tests/baselines/reference/typingsSuggestionBun1.errors.txt
a.ts(1,14): error TS2304: Cannot find name 'Bun'.


==== tsconfig.json (0 errors) ====
    { "compilerOptions": {"types": []} }
    
==== a.ts (1 errors) ====
    const file = Bun.file("/a.ts");
                 ~~~
!!! error TS2304: Cannot find name 'Bun'.
    